test-suite/typecheck/pass/option_some_none.first
import * "Prelude"
function f() -> Option<Int> {
  return some(42);
}
function g() -> Option<Int> {
  return none();
}
