test-suite/typecheck/fail/adt_constructor_arity.first
import * "Prelude"
function f() -> Option<Int> {
  return some(1, 2);
}
